--- a/reno.css
+++ b/reno.css
@@ -207,6 +207,25 @@ blockquote
 	margin-right: -4pt;
 }
 
+IMG.fig
+{
+	width: 70%;
+	border-top: 1px solid #C5C5C5;
+	border-bottom: 1px solid #C5C5C5;
+	border-left: 1px solid #C5C5C5;
+	border-right: 1px solid #C5C5C5;
+	padding-top: 5pt;
+	padding-bottom: 5pt;
+	padding-left: 5pt;
+	padding-right: 5pt;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10pt;
+	margin-bottom: 10pt;
+	display: block;
+	clear: both;
+}
+
 .body-0
 {
 	min-width: 40em;
